Boostrap CSS Framework used to insert form for city input into weather dashboard - labelling, input, spacing utilities etc. CSS used to ensure uniformity of button width throughout application as example provided in Challenge Readme has all buttons matching the width of their container

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,1 +1,4 @@
-/* Bootstrap used for all structure and styling requirements */
+/* Bootstrap used for majority of structure and styling requirements */
+button {
+    width: 100%;
+}
